--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <!-- og -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:title" content="아트보다">
-  <meta property="og:url" content="https://gonghanna.github.io/artboda">
-  <meta property="og:image" content="https://gonghanna.github.io/artboda/images/ticket1.png">
+  <meta property="og:url" content="https://gonghanna.github.io/Artboda/">
+  <meta property="og:image" content="https://gonghanna.github.io/Artboda/images/ticket1.png">
   <meta name="description" content="리액트로 만들어진 아트보다 앱 버전 웹사이트 입니다" />
   <meta property="og:type" content="website">
   <!-- favicon -->
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon/favicon-16x16.png">
   <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=bba173386a7d35d382a0448e29ce8a71"></script>
-  <base href="/artboda">
+  <base href="/Artboda">
 </head>
 
 <body>
